# FProjectP3

./: ACTIVIDAD.md  CMakeLists.txt
assets/: .~lock.Inventariado Fisico.xlsx#  Inventariado-Fisico2.csv
lib/: CantArt.h  CantArtDif.h  Gestor.h  MaxStock.h  MinStock.h  MinStockDeposito.h  Producto.h  mainMenu.h  min_stock_depositos-NoTENERmuchoEnCuenta.h  min_stock_depositos.h
src/: CantArt.cpp  CantArtDif.cpp  Gestor.cpp  MaxStock.cpp  MinStock.cpp  MinStockDeposito.cpp  loop.cpp  main.cpp  mainMenu.cpp  min_stock_depositos-NoTENERmuchoEnCuenta.cpp  min_stock_depositos.cpp  sfml-app
